--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,20 +4,20 @@ services:
   db:
     container_name: db
     build:
-      context: .
+      context: ./mysql/
       dockerfile: Dockerfile
     platform: linux/x86_64
     tty: true
     ports:
       - 3306:3306
     env_file:
-      - ./.env_mysql
+      - ./mysql/.env_mysql
     volumes:
       - type: volume
         source: mysql-data
         target: /var/lib/mysql
       - type: bind
-        source: ./init
+        source: ./mysql/init
         target: /docker-entrypoint-initdb.d
 
 volumes:
