--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,13 @@
 version: "3.8"
 
 services:
+  api:
+    build:
+      context: ./api/
+      dockerfile: Dockerfile
+    ports:
+      - 8080:8080
+
   db:
     container_name: db
     build:
