--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -1,7 +1,13 @@
-FROM golang:1.15
+FROM golang:1.19
 RUN mkdir /app
 ADD . /app/
 WORKDIR /app
+RUN go work init api model mysql 
+WORKDIR /app/api
+RUN go mod download
+WORKDIR /app/model
+RUN go mod download
+WORKDIR /app/mysql
 RUN go mod download
 RUN go build -o main ./...
 CMD ["/app/main"]
